--- a/package.json
+++ b/package.json
@@ -8,12 +8,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^3.0.3",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/native": "^5.0.5",
+    "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
+    "expo-asset": "^8.2.1",
     "expo-status-bar": "~1.0.3",
+    "moment": "^2.29.1",
+    "numeral": "^2.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-geolocation-service": "^5.1.1",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-google-places-autocomplete": "^2.1.2",
+    "react-native-maps": "^0.27.1",
+    "react-native-modal-datetime-picker": "^9.2.1",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-screens": "^2.16.1",
+    "react-native-sliders": "^1.1.1",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.3",
+    "react-navigation-stack": "^2.10.2",
+    "react-navigation-tabs": "^2.10.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
