--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-screens": "^2.16.1",
     "react-native-sliders": "^1.1.1",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.17.1",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1",
