--- a/package.json
+++ b/package.json
@@ -8,43 +8,43 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/checkbox": "^0.5.9",
-    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/slider": "^4.1.12",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/drawer": "^5.12.9",
     "@react-navigation/native": "^5.0.5",
     "@react-navigation/stack": "^5.12.8",
-    "expo": "~44.0.0",
-    "expo-asset": "~8.4.5",
-    "expo-checkbox": "~2.0.0",
-    "expo-linear-gradient": "~11.0.0",
-    "expo-status-bar": "~1.2.0",
+    "expo": "^49.0.5",
+    "expo-asset": "~8.10.1",
+    "expo-checkbox": "~2.4.0",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-status-bar": "~1.6.0",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
-    "react": "17.0.1",
-    "react-dom": "16.13.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-google-autocomplete": "^2.6.1",
-    "react-native": "0.64.3",
+    "react-native": "0.72.3",
+    "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-geolocation-service": "^5.1.1",
-    "react-native-gesture-handler": "^2.1.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-maps": "^0.29.4",
+    "react-native-maps": "1.7.1",
     "react-native-modal-datetime-picker": "^9.2.1",
-    "react-native-reanimated": "^2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-sliders": "^1.1.1",
-    "react-native-web": "^0.17.5",
+    "react-native-web": "~0.19.6",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
-    "react-navigation-tabs": "^2.10.1",
+    "react-navigation-tabs": "^1.2.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "~7.13.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
