--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "name": "nimmit",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -8,11 +9,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@expo/metro-config": "^0.10.7",
+    "@react-native-community/datetimepicker": "7.4.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/bottom-tabs": "^5.11.2",
-    "@react-navigation/drawer": "^5.12.9",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^5.0.5",
     "@react-navigation/stack": "^5.12.8",
     "expo": "^49.0.5",
