--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "1.7.1",
-    "react-native-modal-datetime-picker": "^9.2.1",
+    "react-native-modal-datetime-picker": "17.0.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
